; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/virtio/network/extr_if_vtnet.c_vtnet_txq_notify.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/virtio/network/extr_if_vtnet.c_vtnet_txq_notify.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vtnet_txq = type { i32, %struct.virtqueue* }
%struct.virtqueue = type { i32 }

@VTNET_TX_TIMEOUT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.vtnet_txq*)* @vtnet_txq_notify to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vtnet_txq_notify(%struct.vtnet_txq* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.vtnet_txq*, align 8
  %4 = alloca %struct.virtqueue*, align 8
  store %struct.vtnet_txq* %0, %struct.vtnet_txq** %3, align 8
  %5 = load %struct.vtnet_txq*, %struct.vtnet_txq** %3, align 8
  %6 = getelementptr inbounds %struct.vtnet_txq, %struct.vtnet_txq* %5, i32 0, i32 1
  %7 = load %struct.virtqueue*, %struct.virtqueue** %6, align 8
  store %struct.virtqueue* %7, %struct.virtqueue** %4, align 8
  %8 = load i32, i32* @VTNET_TX_TIMEOUT, align 4
  %9 = load %struct.vtnet_txq*, %struct.vtnet_txq** %3, align 8
  %10 = getelementptr inbounds %struct.vtnet_txq, %struct.vtnet_txq* %9, i32 0, i32 0
  store i32 %8, i32* %10, align 8
  %11 = load %struct.virtqueue*, %struct.virtqueue** %4, align 8
  %12 = call i32 @virtqueue_notify(%struct.virtqueue* %11)
  %13 = load %struct.vtnet_txq*, %struct.vtnet_txq** %3, align 8
  %14 = call i64 @vtnet_txq_enable_intr(%struct.vtnet_txq* %13)
  %15 = icmp eq i64 %14, 0
  br i1 %15, label %16, label %17

16:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %29

17:                                               ; preds = %1
  %18 = load %struct.vtnet_txq*, %struct.vtnet_txq** %3, align 8
  %19 = call i64 @vtnet_txq_eof(%struct.vtnet_txq* %18)
  %20 = icmp ne i64 %19, 0
  br i1 %20, label %21, label %28

21:                                               ; preds = %17
  %22 = load %struct.vtnet_txq*, %struct.vtnet_txq** %3, align 8
  %23 = call i64 @vtnet_txq_below_threshold(%struct.vtnet_txq* %22)
  %24 = icmp eq i64 %23, 0
  br i1 %24, label %25, label %28

25:                                               ; preds = %21
  %26 = load %struct.virtqueue*, %struct.virtqueue** %4, align 8
  %27 = call i32 @virtqueue_disable_intr(%struct.virtqueue* %26)
  store i32 1, i32* %2, align 4
  br label %29

28:                                               ; preds = %21, %17
  store i32 0, i32* %2, align 4
  br label %29

29:                                               ; preds = %28, %25, %16
  %30 = load i32, i32* %2, align 4
  ret i32 %30
}

declare dso_local i32 @virtqueue_notify(%struct.virtqueue*) #1

declare dso_local i64 @vtnet_txq_enable_intr(%struct.vtnet_txq*) #1

declare dso_local i64 @vtnet_txq_eof(%struct.vtnet_txq*) #1

declare dso_local i64 @vtnet_txq_below_threshold(%struct.vtnet_txq*) #1

declare dso_local i32 @virtqueue_disable_intr(%struct.virtqueue*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
